Add terms editor

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -22,6 +22,7 @@
     "Texts": "Texty",
     "Audio": "Audio",
     "Video": "Video",
+    "Terms": "Termíny",
     "AddResource": "Přidat zdroj",
     "DeleteResource": "Smazat zdroj",
     "RenameResource": "Přejmenovat zdroj",
