--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -22,6 +22,7 @@
     "Texts": "translate[Texty]",
     "Audio": "translate[Audio]",
     "Video": "translate[Video]",
+    "Terms": "Terms",
     "AddResource": "translate[Přidat zdroj]",
     "DeleteResource": "translate[Smazat zdroj]",
     "RenameResource": "translate[Přejmenovat zdroj]",
