--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -25,6 +25,7 @@
     "PageName": "Stránka: {0}",
     "Pages": "Stránky",
     "NoPages": "Projekt neobsahuje stránky.",
+    "PageDoesNotContainTerms": "Stránka neobsahuje termíny.",
     "PageContent": "Obsah stránky",
     "PagePreview": "Náhled stránky",
     "UnsavedChanges": "Provedené změny nejsou uloženy.",
