--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -25,7 +25,8 @@
     "PageName": "Page: {0}",
     "Pages": "Pages",
     "NoPages": "Project does not contain pages.",
-    "PageContent": "Page content",
+    "PageDoesNotContainTerms": "Page does not contain terms.",
+    "PageContent": "Page content",    
     "PagePreview": "Page preview",
     "UnsavedChanges": "Made changes are not saved.",
     "PageContainsText": "Page contains text",
