--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -160,6 +160,8 @@
     "Transcription": "Transkripce",
     "Transliteration": "Transliterace",
     "Generate": "Generovat",
+    "Transcribed": "Transkribovaný",
+    "Transliterated": "Transliterovaný",
 
     "PublishedSnapshots": "Zveřejněné publikace",
     "Date": "Datum",
@@ -228,6 +230,7 @@
     "AdvancedSearch": "Pokročilé vyhledávání",
     "NewProject": "Nové dílo",
     "NewProjectName": "Pracovní název díla",
+    "TextType": "Typ textu",
     "Rename": "Přejmenovat",
     "RenameProject": "Přejmenovat pracovní název díla",
     "DeleteProject": "Smazat dílo",
@@ -238,7 +241,7 @@
     "NoSelectedModuleForForum": "Musí být vybrán alespoň jeden modul pro vytvoření fóra.",
     "EmptyProjectNameError": "Název díla nemůže být prázdný.",
     "NoProjectsSearch": "Je nám líto, ale nepodařilo se najít žádné projekty odpovídající dotazu ",
-    "NoProjectsFound": "Je nám líto, ale nebyly nalezeny žádné projekty",    
+    "NoProjectsFound": "Je nám líto, ale nebyly nalezeny žádné projekty",
     "RenameSource": "Přejmenovat zdroj",
     "SearchQuery": "Zobrazují se výsledky pro",
     "ResetSearch": "Zrušit hledání",
