Terms editor - add dialog with terms manager

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -258,6 +258,9 @@
     "WorksLoadFailed": "Při načítání prací nastala neočekávaná chyba.",
     "SelectAuthor": "Prosím vyberte autora ze seznamu.",
     "SelectResponsiblePerson": "Prosím vyberte odpovědnou osobu ze seznamu.",
-    "SelectResponsibleType": "Prosím vyberte typ odpovědnosti."
+    "SelectResponsibleType": "Prosím vyberte typ odpovědnosti.",
+
+    "AddTerms": "Přidat termíny",
+    "AllCategories": "Všechny kategorie"
   }
 }
