--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -144,7 +144,10 @@
     "ProjectGroupDescription":
       "Skupina děl je tvořena stejnými díly, která se liší v některých parametrech. Nejvýraznější rozdíl může být u textu, který může být transliterovaný nebo transkribovaný. Stejné dílo zároveň může být zpracováváno dvěma různými editory. Tento nástroj umožňuje tato díla provázat pro snadnější vyhledávání.",
     "ProjectGroupSavingInfo": "Změny nastavení skupin děl jsou ihned bez potvrzování ukládány.",
-    "AddProject": "Přidat dílo",
+    "AddProjectToGroup": "Přidat toto dílo do jiné skupiny",
+    "RemoveProjectFromGroup": "Odebrat toto dílo ze skupiny",
+    "ProjectsInGroup": "Díla ve skupině",
+    "SelectProjectForCreatingGroup": "Vyberte dílo, se kterým stávající dílo vytvoří skupinu",
 
     "EditPageList": "Upravit seznam stránek",
     "AddPage": "Přidat stránku",
