--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -144,7 +144,10 @@
     "ProjectGroupDescription":
       "translate[Skupina děl je tvořena stejnými díly, která se liší v některých parametrech. Nejvýraznější rozdíl může být u textu, který může být transliterovaný nebo transkribovaný. Stejné dílo zároveň může být zpracováváno dvěma různými editory. Tento nástroj umožňuje tato díla provázat pro snadnější vyhledávání.]",
     "ProjectGroupSavingInfo": "translate[Změny nastavení skupin děl jsou ihned bez potvrzování ukládány.]",
-    "AddProject": "translate[Přidat dílo]",
+    "AddProjectToGroup": "translate[Přidat toto dílo do jiné skupiny]",
+    "RemoveProjectFromGroup": "translate[Odebrat toto dílo ze skupiny]",
+    "ProjectsInGroup": "translate[Díla ve skupině]",
+    "SelectProjectForCreatingGroup": "translate[Vyberte dílo, se kterým stávající dílo vytvoří skupinu]",
 
     "EditPageList": "translate[Upravit seznam stránek]",
     "AddPage": "Add page",
