Show projects from group, unassing from group, prepare for assigning to group

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -250,6 +250,7 @@
     "EmptyProjectNameError": "Název díla nemůže být prázdný.",
     "NoProjectsSearch": "Je nám líto, ale nepodařilo se najít žádné projekty odpovídající dotazu ",
     "NoProjectsFound": "Je nám líto, ale nebyly nalezeny žádné projekty",
+    "NoProjects": "Nebyla nalezena žádná díla",
     "RenameSource": "Přejmenovat zdroj",
     "SearchQuery": "Zobrazují se výsledky pro",
     "ResetSearch": "Zrušit hledání",
