--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -148,6 +148,7 @@
     "RemoveProjectFromGroup": "translate[Odebrat toto dílo ze skupiny]",
     "ProjectsInGroup": "translate[Díla ve skupině]",
     "SelectProjectForCreatingGroup": "translate[Vyberte dílo, se kterým stávající dílo vytvoří skupinu]",
+    "SelectProjectForCreatingGroupNote": "translate[Poznámka: Zobrazena jsou jenom díla, ke kterým máte oprávnění.]",
 
     "EditPageList": "translate[Upravit seznam stránek]",
     "AddPage": "Add page",
