Add text type to project list

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -171,6 +171,8 @@
     "Generate": "Generovat",
     "Transcribed": "Transkribovaný",
     "Transliterated": "Transliterovaný",
+    "TranscribedText": "Transkribovaný text",
+    "TransliteratedText": "Transliterovaný text",
 
     "PublishedSnapshots": "Zveřejněné publikace",
     "Date": "Datum",
