--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -171,6 +171,8 @@
     "Generate": "translate[Generovat]",
     "Transcribed": "Transcribed",
     "Transliterated": "Transliterated",
+    "TranscribedText": "Transcribed text",
+    "TransliteratedText": "Transliterated text",
 
     "PublishedSnapshots": "Published publications",
     "Date": "translate[Datum]",
