Term editor - improve alert in dialog, minor view improvements

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -262,6 +262,7 @@
 
     "EditTerms": "Upravit termíny",
     "EditTermsTitle": "Úprava termínů - strana {0}",
+    "RemoveTerm": "Odebrat termín",
     "SelectedTerms": "Vybrané termíny",
     "AllCategories": "Všechny kategorie",
     "Search...": "Hledat..."
