--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -262,6 +262,7 @@
 
     "EditTerms": "Edit terms",
     "EditTermsTitle": "Terms editing - page {0}",
+    "RemoveTerm": "Remove term",
     "SelectedTerms": "Selected terms",
     "AllCategories": "All categories",
     "Search..." : "Search..." 
