Add label to Search in second portal button, improve styles mainly for mobiles

--- a/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.cs-CZ.json
@@ -26,6 +26,8 @@
     "BookFromResearchPortal": "Dílo z Vokabuláře webového",
     "BookFromCommunityPortal": "Dílo z komunitního portálu",
     "BibliographicRecord": "Bibliografický záznam",
+    "SearchInResearchPortal": "Vyhledat ve Vokabuláři webovém",
+    "SearchInCommunityPortal": "Vyhledat v komunitním portálu",
     "NotFilled": "&lt;Nezadáno&gt;"
   }
 }
