--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -275,6 +275,8 @@
     "SelectResponsiblePerson": "Prosím vyberte odpovědnou osobu ze seznamu.",
     "SelectResponsibleType": "Prosím vyberte typ odpovědnosti.",
 
+    "SelectPage": "Vyberte stránku",
+    "TermsOnPage": "Termíny na stránce",
     "EditTerms": "Upravit termíny",
     "EditTermsTitle": "Úprava termínů - strana {0}",
     "RemoveTerm": "Odebrat termín",
