--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
@@ -80,6 +80,7 @@
     "ReadPublishedProjectPermission": "Právo číst publikovaný projekt",
     "EditProjectPermission": "Právo editovat projekt",
     "AdminProjectPermission": "Právo spravovat projekt",
-    "AddPermissionOnProjectHelp": "Pokud chcete přidat právo pouze jedné osobě, požádejte ji, aby Vám sdělila svůj kód uživatele, který zadáte do pole níže. Kód uživatele lze nalézt v profilu uživatele pod záložkou \"Kód uživatele\"."
+    "AddPermissionOnProjectHelp": "Pokud chcete přidat právo pouze jedné osobě, požádejte ji, aby Vám sdělila svůj kód uživatele, který zadáte do pole níže. Kód uživatele lze nalézt v profilu uživatele pod záložkou \"Kód uživatele\".",
+    "UserCodeHelp" : "Kód uživatele slouží k umožnění spolupráce na dílech ostatních uživatelů."
   }
 }
