Improve term editor dialog layout and style

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -277,6 +277,7 @@
 
     "SelectPage": "Vyberte stránku",
     "TermsOnPage": "Termíny na stránce",
+    "TermList": "Seznam termínů",
     "EditTerms": "Upravit termíny",
     "EditTermsTitle": "Úprava termínů - strana {0}",
     "RemoveTerm": "Odebrat termín",
