--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -277,6 +277,7 @@
 
     "SelectPage": "Select page",
     "TermsOnPage": "Terms on the page",
+    "TermList": "Term list",
     "EditTerms": "Edit terms",
     "EditTermsTitle": "Terms editing - page {0}",
     "RemoveTerm": "Remove term",
