Add placeholders for search inputs

--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
@@ -51,6 +51,9 @@
 
     "Advanced": "Pokročilé",
     "Search...": "Hledat...",
+    "SearchInTitles...": "Hledat v názvech děl...",
+    "SearchInFulltext...": "Hledat ve fulltextu...",
+    "SearchInDictionaries...": "Hledat ve slovnících...",
     "Finish": "Dokončit",
     "Cancel": "Zrušit",
     "+And": "+ A zároveň",
