--- a/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.cs-CZ.json
@@ -26,6 +26,13 @@
     "BookFromResearchPortal": "Dílo z Vokabuláře webového",
     "BookFromCommunityPortal": "Dílo z komunitního portálu",
     "BibliographicRecord": "Bibliografický záznam",
+    "ResearchPortal": "Vokabulář webový",
+    "CommunityPortal": "Komunitní portál",
+    "BibliographicRecords": "Bibliografické záznamy",
+    "ResearchPortalShort": "Vokabulář",
+    "CommunityPortalShort": "Komunitní",
+    "BibliographicRecordsShort": "Bibliografie",
+    "SearchedAreas": "Prohledávané oblasti",
     "SearchInResearchPortal": "Vyhledat ve Vokabuláři webovém",
     "SearchInCommunityPortal": "Vyhledat v komunitním portálu",
     "NotFilled": "&lt;Nezadáno&gt;"
