--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -18,6 +18,7 @@
     "ProjectHeader": "translate[Projekt - ]",
     "ProjectTitle": "translate[Název díla]",
     "Project": "translate[Dílo]",
+    "InfoAboutWork": "Info about work",
     "ImageScan": "translate[Obrazové skeny]",
     "Texts": "translate[Texty]",
     "Audio": "translate[Audio]",
