Add missing localization for Exact match in advanced search

--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
@@ -110,6 +110,7 @@
     "StartsWith": "Začíná na",
     "Contains": "Obsahuje",
     "EndsWith": "Končí na",
+    "ExactMatch": "Přesně se shoduje",
     "Distance:": "Vzdálenost: ",
     "TitleSort": "Název",
     "DatingSort": "Datace",
