--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.en.json
@@ -110,6 +110,7 @@
     "StartsWith": "translate[Začíná na]",
     "Contains": "translate[Obsahuje]",
     "EndsWith": "translate[Končí na]",
+    "ExactMatch": "translate[Přesně se shoduje]",
     "Distance:": "translate[Vzdálenost: ]",
     "TitleSort": "translate[Název]",
     "DatingSort": "translate[Datace]",
