Search in second portal button on Search page (which allows fulltext), show error if no valid criteria entered

--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.en.json
@@ -7,6 +7,7 @@
     "NoResultsToShow": "translate[Žádné výsledky k zobrazení]",
     "SearchError": "translate[Chyba při vyhledávání.]",
     "LoadingBookListError": "translate[Chyba při načítání seznamu děl.]",
+    "SearchCriteriaError": "translate[Zadáno neplatné nebo nepodporované vyhledávací kritérium.]",
     "Unknown": "translate[Neznámý]",
 
     "FilterByName": "translate[Filtrovat podle názvu..]",
