--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
@@ -7,6 +7,7 @@
     "NoResultsToShow": "Žádné výsledky k zobrazení",
     "SearchError": "Chyba při vyhledávání.",
     "LoadingBookListError": "Chyba při načítání seznamu děl.",
+    "SearchCriteriaError": "Zadáno neplatné nebo nepodporované vyhledávací kritérium.",
     "Unknown": "Neznámý",
 
     "FilterByName": "Filtrovat podle názvu..",
