Detect any filtered out search criteria and show warning

--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
@@ -8,6 +8,7 @@
     "SearchError": "Chyba při vyhledávání.",
     "LoadingBookListError": "Chyba při načítání seznamu děl.",
     "SearchCriteriaError": "Zadáno neplatné nebo nepodporované vyhledávací kritérium.",
+    "UnsupportedCriteriaRemoved": "Vyhledávací dotaz obsahoval nepodporované kritérium. Toto kritérium bylo vyřazeno a vyhledávání proběhlo bez něho.",
     "Unknown": "Neznámý",
 
     "FilterByName": "Filtrovat podle názvu..",
