Add missing localization for error in card files

--- a/UJCSystem/ITJakub.Web.Hub/Localization/CardFiles/CardFiles.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/CardFiles/CardFiles.cs-CZ.json
@@ -26,6 +26,8 @@
     "Drawer": "Zásuvka",
     "NoResults": "Vyhledávání neodpovídá žádný výsledek",
     "NoCardFileSelected": "Není vybrána žádná kartotéka",
+    "Error": "Chyba",
+    "PermissionsError": "Nedostatečná práva pro přístup ke kartotékám",
     "ServerCommunicationError": "Došlo k chybě v komunikaci se serverem"
   }
 }
