Text editor - add title to refresh

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -71,6 +71,7 @@
     "EditPage": "Upravit stránku",
     "CreateText": "Vytvořit text",
     "CreateTextPage": "Vytvořit text stránky",
+    "RefreshTextPage": "Znovu načíst text stránky",
     "Comment": "Komentář",
     "Commentary": "Komentář",
     "Respond": "Odpovědět",
