--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -71,6 +71,7 @@
     "EditPage": "Edit page",
     "CreateText": "Create text",
     "CreateTextPage": "Create a text page",
+    "RefreshTextPage": "Refresh a text page",
     "Comment": "Comment",
     "Commentary": "Commentary",
     "Respond": "Respond",
