Show text type in bibliography module in detail

--- a/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.cs-CZ.json
@@ -10,6 +10,7 @@
     "SourceAbbreviation": "Zkratka pramene",
     "LiteraryType": "Literární druh",
     "LiteraryGenre": "Literární žánr",
+    "TextType": "Typ textu",
     "EditionLastModification": "Poslední úprava edice",
     "LinkToForum": "Odkaz na fórum",
     "Link": "Odkaz",
