--- a/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BibliographyModule/BibliographyModule.en.json
@@ -10,6 +10,7 @@
     "SourceAbbreviation": "translate[Zkratka pramene]",
     "LiteraryType": "translate[Literární druh]",
     "LiteraryGenre": "translate[Literární žánr]",
+    "TextType": "translate[Typ textu]",
     "EditionLastModification": "translate[Poslední úprava edice]",
     "LinkToForum": "translate[Odkaz na fórum]",
     "Link": "translate[Odkaz]",
