Disable elements according to permissions in User/Role management views

--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionNames/PermissionNames.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionNames/PermissionNames.cs-CZ.json
@@ -10,7 +10,7 @@
     "auth-edit-self-personal-data": "Upravovat vlastní osobní údaje",
     "auth-find-user-by-registration-code": "Vyhledat uživatele podle registračního kódu",
     "auth-get-non-verified-user-by-verification-code": "Vyhledat neověřené uživatele podle registračního kódu",
-    "auth-list-users": "Zobrazit všechny uživatele",
+    "auth-list-users": "Zobrazit seznam uživatelů",
     "auth-manage-non-verified-users-data": "Spravovat neověřené uživatele",
     "auth-manage-user-permissions": "Spravovat práva",
     "auth-manage-user-roles": "Spravovat uživatelské skupiny",
