--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -2,20 +2,20 @@
   "culture": "en",
   "scope": "Admin",
   "dictionary": {
-    "ListError": "translate[...]",
-    "ModuleError": "translate[...]",
-    "BookmarkError": "translate[...]",
-    "ResourceError": "translate[..]",
-    "VersionListError": "translate[...]",
+    "ListError": "translate[Chyba při načítání strany se seznamem děl]",
+    "ModuleError": "translate[Chyba při načítání modulu]",
+    "BookmarkError": "translate[Chyba při načítání záložky.]",
+    "ResourceError": "translate[Chyba při načítání zdrojů]",
+    "VersionListError": "translate[Chyba při načítání seznamu verzí]",
 
-    "MissingPublisherNameError": "translate[...]",
-    "CreatePublisherError": "translate[...]",
-    "MissingName": "translate[...]",
-    "CreateLiteraryKind": "translate[..]",
-    "CreateLiteraryGenre": "translate[...]",
-    "CreateResourcesError": "translate[...]",
+    "MissingPublisherNameError": "translate[Nebyl vyplněn název nakladatele]",
+    "CreatePublisherError": "translate[Chyba při vytváření nového nakladatele]",
+    "MissingName": "translate[Nebyl vyplněn název]",
+    "CreateLiteraryKind": "translate[Chyba při vytváření nového literárního druhu]",
+    "CreateLiteraryGenre": "translate[Chyba při vytváření nového literárního žánru]",
+    "CreateResourcesError": "translate[Chyba při načítání zdrojů k publikaci]",
 
-    "ProjectHeader": "translate[Projekt - ]",
+    "ProjectHeader": "translate[Dílo - ]",
     "ProjectTitle": "translate[Název díla]",
     "Project": "translate[Dílo]",
     "InfoAboutWork": "Info about work",
@@ -73,7 +73,7 @@
     "ChapterName": "Chapter name",
     "NewChapter": "New chapter",
     "StartsOnPage": "Starts on page",
-    "NoChapters": "Project does not contain chapters.",
+    "NoChapters": "The work does not contain chapters.",
 
     "CommonInformation": "translate[Obecné informace]",
     "ProjectName": "translate[Název díla]",
@@ -211,7 +211,7 @@
     "CardFile": "translate[Kartotéky]",
     "AudioBook": "translate[Audioknihy]",
     "All": "translate[Vše]",
-    "ProjectNotContains": "The project does not contain {0}",
+    "ProjectNotContains": "The work does not contain {0}",
 
     "DefaultModule": "Default module",
     "VisibilityInModules": "Visibility in modules",
@@ -253,8 +253,8 @@
     "CreateForumInModules": "Create a forum in modules",
     "NoSelectedModuleForForum": "At least one module must be selected for forum creation.",
     "EmptyProjectNameError": "Project name cannot be empty.",
-    "NoProjectsSearch": "Sorry, but we could not find any project matching ",
-    "NoProjectsFound": "Sorry, but no projects were found",
+    "NoProjectsSearch": "Sorry, but we could not find any work matching ",
+    "NoProjectsFound": "Sorry, but no wokrs were found",
     "NoProjects": "translate[Nebyla nalezena žádná díla]",
     "RenameSource": "translate[Přejmenovat zdroj]",
     "SearchQuery": "Showing results for",
