--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.en.json
@@ -29,7 +29,7 @@
     "import-failed": "Import failed",
     "import-failed-with-error": "Import failed. {0}",
     "import-succeed-forum-failed": "Import succeeded. Forum creation failed. {0}",
-    "project-not-exist": "The project does not exist.",
+    "project-not-exist": "The work does not exist.",
     "forum-already-created": "The forum is already created.",
     "cannot-remove-default-favorite-label": "Can't remove default favorite label",
     "cannot-modify-default-favorite-label": "User can't modify default favorite label",
@@ -39,7 +39,7 @@
     "item-not-found": "Item not found",
     "not-supported-criteria-key": "Not supported criteria key: {0}",
     "missing-fulltext-criteria": "Missing any fulltext criteria",
-    "delete-resource-project-relation": "Could not delete resource. Existing relation to Project?",
+    "delete-resource-project-relation": "Could not delete resource. Existing relation to work?",
     "delete-resource-page-relation": "Could not delete resource. Existing relation to resource Page?",
     "add-user-to-default-role": "Users cannot be added to the default group {0}.",
     "rename-default-role": "The name of the default group {0} cannot be changed.",
