--- a/UJCSystem/ITJakub.Web.Hub/Localization/layout/layout.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/layout/layout.cs-CZ.json
@@ -27,8 +27,8 @@
     "Derivation": "Derivace hláskových podob",
     "UserManagement": "Správa uživatelů",
     "GroupManagement": "Správa skupin",
-    "BookPermissionManagement": "Správa práv projektů",
-    "FeedbackManagement": "Správa připomínek",
+    "BookPermissionManagement": "Práva na díla",
+    "FeedbackManagement": "Připomínky",
     "FavoriteItems": "Oblíbené položky",
     "AddNews": "Přidat novinku",
     "AboutVW": "O Vokabuláři webovém",
