--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
@@ -29,7 +29,7 @@
     "import-failed": "Import selhal",
     "import-failed-with-error": "Import selhal. {0}",
     "import-succeed-forum-failed": "Import proběhl úspěšně. Vytvoření fóra selhalo. {0}",
-    "project-not-exist": "Projekt neexistuje.",
+    "project-not-exist": "Dílo neexistuje.",
     "forum-already-created": "Fórum je již vytvořeno.",
     "cannot-remove-default-favorite-label": "Nelze odstranit výchozí štítek",
     "cannot-modify-default-favorite-label": "Uživatel nemůže upravovat výchozí štítek",
@@ -39,7 +39,7 @@
     "item-not-found": "Položka nenalezana",
     "not-supported-criteria-key": "Nepodporovaný klíč kritéria: {0}",
     "missing-fulltext-criteria": "Chybí jakékoliv fulltextové kritérium",
-    "delete-resource-project-relation": "Nelze smazat zdroj. Je zde existující propojení se projektem?",
+    "delete-resource-project-relation": "Nelze smazat zdroj. Je zde existující propojení s dílem?",
     "delete-resource-page-relation": "Nelze smazat zdroj. Je zde existující propojení se stránkou?",
     "add-user-to-default-role": "Nelze přidávat uživatele do výchozí skupiny {0}",
     "rename-default-role": "Název výchozí skupiny {0} nemůže být změněn.",
