--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
@@ -30,10 +30,10 @@
     "RoleIsNotSelected": "Není vybrána skupina.",
     "UserIsNotSelected": "Uživatel není vybrán.",
     "UserCodeIsNotEntered": "Není zadán kód uživatele.",
-    "ProjectIsNotSelected": "Není vybrán projekt.",
-    "RemoveProjectFromRoleError": "Nastala neočekávaná chyba při odstraňování práva na projekt ze skupiny.",
-    "AddProjectToRoleError": "Nastala neočekávaná chyba při přidávání práva na projekt skupině.",
-    "AddProjectToUserError": "Nastala neočekávaná chyba při přidávání práva na projekt uživateli.",
+    "ProjectIsNotSelected": "Není vybráno dílo.",
+    "RemoveProjectFromRoleError": "Nastala neočekávaná chyba při odstraňování práva na dílo ze skupiny.",
+    "AddProjectToRoleError": "Nastala neočekávaná chyba při přidávání práva na dílo skupině.",
+    "AddProjectToUserError": "Nastala neočekávaná chyba při přidávání práva na dílo uživateli.",
     "ChangesSavedSuccessfully": "Změny byly úspěšně uloženy.",
 
     "PasswordResetSuccess": "Odkaz pro resetování hesla byl odeslán na email uživatele.",
