--- a/UJCSystem/ITJakub.Web.Hub/Localization/layout/layout.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/layout/layout.en.json
@@ -27,8 +27,8 @@
     "Derivation": "Derivation of spell forms",
     "UserManagement": "User management",
     "GroupManagement": "Group management",
-    "BookPermissionManagement": "Project's permission management",
-    "FeedbackManagement": "Feedback management",
+    "BookPermissionManagement": "Permissions on work",
+    "FeedbackManagement": "Feedback",
     "FavoriteItems": "Favorite items",
     "AddNews": "Add news",
     "AboutVW": "About Vokabulář webový",
