Fix title in breadcrumb on page ProjectPermission

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
@@ -67,6 +67,7 @@
     "GroupEditTitle": "Úprava skupiny",
     "Changed": "Změněno",
 
+    "ProjectPermissionManagementTitle": "Administrace - Práva na dílo",
     "ProjectPermissionManagementHeadline": "Práva na dílo",
     "Projects": "Díla",
     "AddProjectPermissionToGroup": "Přidat skupině právo na dílo",
