Add creating news for both portal types

--- a/UJCSystem/ITJakub.Web.Hub/Localization/News/News.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/News/News.cs-CZ.json
@@ -12,7 +12,10 @@
     "DiacriticsAllowed": "Můžete používat diakritiku",
     "Submit": "Přidat",
     "Events": "Události",
-    "ErrorNoCalendar": "Není dostupný žádný kalendář."
+    "ErrorNoCalendar": "Není dostupný žádný kalendář.",
+    "AddForCommunityPortal": "Přidat pro Komunitní portál",
+    "AddForResearchPortal": "Přidat pro Vokabulář webový",
+    "CreateNewsForOnePortalError": "Pro vztvoření novinky musíte vybrat alespoň jeden portál."
   },
   "constants": {
     "GoogleCalendarLanguage": "cs"
