--- a/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BookReader/BookReader.en.json
@@ -2,6 +2,76 @@
   "culture": "en",
   "scope": "BookReader",
   "dictionary": {
+    //Tab names
+    "text": "Text",
+    "audio": "Audio tracks",
+    "image": "Image",
+    "content": "Book contents",
+    "bookmarks": "Bookmarks",
+    "search": "Search results",
+    "terms": "Linguistic terms",
+    "termsResult": "Terms on page",
+    "termsSearch": "Search results on page",
 
+
+    //Button names
+    "addBoookmark": "Add bookmark",
+    "pageNames": "Page numbers",
+    "wrapPages": "Wrap pages",
+    "notes": "Notes",
+
+    "editionNote": "Edition note",
+    "noEditionNote": "This book has no edition note",
+    "failedToLoadNote": "Failed to load edition note",
+
+    "informations": "Book informations",
+    "editor": "Editor",
+    "original": "Original book",
+    "relicAbbr": "Relic abbreviation",
+    "sourceAbbr": "Source abbreviation",
+    "literaryType": "translate[Literární druh]",
+    "literaryGenre": "Literary genre",
+    "EditionLastModification": "Last book edition",
+    "FailedToLoadInfo": "Failed to load book informations",
+
+    "failedToLoadAuthors": "Failed to load authors",
+
+    "page": "Page",
+    "GoToPage": "Go to page...",
+
+    "nullValue": "Empty",
+
+    "BookmarksGt4": " bookmarks",
+    "BookmarksLt4": " bookmarks",
+    "Bookmark": " bookmark",
+    "CreatingBookmarkError": "Failed to create bookmark",
+
+    "BookSources": "Book sources",
+    "Label": "{0} (Label: {1})",
+
+    "close": "Close",
+    "maximise": "Maximize",
+    "minimise": "Minimize",
+    "popout": "Open in new window",
+
+    "searchResultFailed": "Failed to load search results, please try again later.",
+    "PageLoadingError": "Failed to load page number '{0}'",
+    "PageLoadingErrorWithSearchResults": "Failed to load page number '{0}' with search results",
+    "FailedToLoadAudioBook": "Failed to load audio book, please try again later.",
+    "FailedToLoadTrack": "Failed to load track, please try again later.",
+
+    "DownloadChapter": "Download chapter",
+    "DownloadAudiobook": "Download audiobook:",
+
+    "NoOccurencesOnPage": "No occurences on curren page",
+    "NoTopicOnPage": "No topic on current page",
+    "LoadingTopicsError": "Failed to load terms on page '{0}'",
+    "UseSearch": "For display search results please first use search.",
+
+    "NoName": "<no name>",
+
+    "AllBookmarks": "All bookmarks",
+
+    "LoadingContentError": "Failed to load content"
   }
 }
